--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,37 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  font-size: 16px;
+  color: #FFFFFF;
+  background-color: #2AABE4;
+  font-family: 'Source Sans Pro'
+  line-height: 1.2;
+
+}
+
+H1 {
+  font-size: 2em; /* 32px*/
+  font-style: normal;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  line-height: 2em;
+}
+
+H3{
+  font-size: 1.2em; /* 32px*/
+  font-style: normal;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  line-height: 1.2em;
+  padding-bottom: 10px;
+}
+
+P{
+  font-size: 1em; /* 16px*/
+  text-align:left;
+  font-style: normal;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  line-height: 1.2em;
+  padding-bottom: 10px;
 }
 
 nav {
@@ -8,6 +39,13 @@ nav {
   float: left;
   position: fixed;
   width: 100%;
+  font-size: 1em; /* 16px*/
+  text-align:left;
+  font-style: normal;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .logo {
@@ -40,6 +78,11 @@ ul {
 li {
   float: right;
   padding: 30px;
+  text-decoration: none;
+  a:link { color:#0070BB; } /* unvisited */
+  a:visited { color:#0070BA; } /* visited */
+  a:hover { color:#0070BC; } /* mouse over */
+  a:active { color:#0070BD; } /* selected */
 }
 
 article {
@@ -50,3 +93,11 @@ article {
   margin: 0 auto;
   width: 50%;
 }
+
+figure {
+  font-size: 1em; /* 16px*/
+  text-align:left;
+  font-style: normal;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  line-height: 1.2;
