--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: #51aead;
   float: left;
   position: fixed;
   width: 100%;
